--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>ТГПУ</h1>
-        <p>Я учусь в <a href="https://www.tspu.edu.ru">ТГПУ</a></p>
+        <p>Я учусь в <a href="https://www.tspu.edu.ru">ТГПУ</a>.</p>
     </body>
 </html>
